# wwww

./: .dockerignore  .gitignore  Cargo.toml  app.dockerfile  base.dockerfile  nginx.conf  requirements.txt  supervisord.conf
scripts/: create_rsvp.py  export.py
src/: main.rs
src/datastore/: client.rs
src/model/: mod.rs
src/service/: form.rs  mod.rs
templates/: guest.html
www/: index.html  lodging.html  registry.html  rsvp.html  rsvp2.html  wedding.html
www/static/css/: index.css  index2.css  rsvp.css
