[package]
name = "wwww"
version = "0.2.0"
authors = ["jacob <vandeweertj@gmail.com>"]

[dependencies]
bytes = "0.4.8"
futures = "0.1.21"
hyper = "0.11.27"
hyper-tls = "0.1.3"
itertools = "0.7.8"
jsonwebtoken = "4.0.1"
regex = "1.0.0"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.19"
tokio-core = "0.1.11"
url = "1.7.0"
